--- a/style.css
+++ b/style.css
@@ -235,7 +235,9 @@
 @media screen and (max-width: 1150px) {
 
     .schedule-container-main{
-        width: 100vw;
+        width: 100%;
+        margin-left: 5px;
+        margin-right: 5px;
     }
 
     .schedule-container .event {
