--- a/style.css
+++ b/style.css
@@ -1,14 +1,19 @@
-/* meta */
+/* Nav Bar */
 
 nav {
     display:flex;
     justify-content: flex-start;
     align-items: center;
     background-color: #f7f3ed;
-    opacity: 0.75; 
+    /* opacity: 0.75;  */
     width: 100%;
     max-width: 100%;
     overflow-x: hidden;
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    width: 100%;
+    transition: top 0.3s; 
 }
 
 .navbar1{
@@ -55,6 +60,10 @@ nav .nav-toggle{
     display: block;       
 }
 
+.main-body{
+    padding-top:60px;
+}
+
 @media screen and (max-width: 768px) {
 
     nav {
@@ -91,17 +100,6 @@ nav .nav-toggle{
     } 
 }
 
-.webpages{
-    background: linear-gradient(135deg,#e0ac91,#f7f3ed,#f1d8c7);
-    background-size: 100% 100%;
-    background-attachment: fixed;
-    margin: 0;
-    padding: 0;
-    width: 100%;
-    max-width: 100%;
-    overflow-x: hidden;
-}
-
 #languageDropdown{
     background-color: transparent;
     border:0;
@@ -124,12 +122,30 @@ nav .nav-toggle{
   }
 } */
 
+/* Meta */
+
+.webpages{
+    background: linear-gradient(135deg,#e0ac91,#f7f3ed,#f1d8c7);
+    background-size: 100% 100%;
+    background-attachment: fixed;
+    margin: 0;
+    padding: 0;
+    width: 100%;
+    max-width: 100%;
+    overflow-x: hidden;
+}
+
 *{
     font-family: sans-serif;
     color: #2c2720;
 }
 
 .handwriting {
+    font-family: "Mrs Saint Delafield", cursive;
+    text-align: center;
+}
+
+.handwriting-eng {
     font-family: "Mrs Saint Delafield", cursive;
     text-align: center;
 }
@@ -145,6 +161,7 @@ nav .nav-toggle{
     background-size: cover;
     background-attachment: fixed;
     background-repeat: no-repeat;
+    overflow: hidden;
 }
 
 .white-text {
@@ -314,6 +331,26 @@ nav .nav-toggle{
     margin-bottom: 2em;
 }
 
+#imageModal {
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width:100%;
+    height: 100%;
+    margin-top: 1em;
+    margin-bottom: 2em;
+    background-color: rgba(0, 0, 0, 0.7);
+    align-items: center;
+    justify-content: center;
+}
+
+#fullsizeImage {
+    max-width: 100%;
+    max-height: 100%;
+}
+
 @media screen and (max-width: 1150px) {
 
     .schedule-container-main{
@@ -403,6 +440,10 @@ nav .nav-toggle{
 
 .menu .handwriting{
     font-size: 1.5em;
+}
+
+.cursive {
+    font-style: italic;
 }
 
 @media screen and (max-width: 1150px) {
