--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ nav .nav-toggle{
     nav {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        justify-content: center;
         align-items: flex-start;
         margin: 0;
         padding: 0;
@@ -97,6 +97,7 @@ nav .nav-toggle{
         display: block; /* Shown when 'active' class is added */
         margin: 0.3em;
         margin-left:15px;
+        width:
     }
 
     nav .nav-toggle {
@@ -397,9 +398,19 @@ nav .nav-toggle{
     justify-content: center;
 }
 
-#fullsizeImage {
+/* #fullsizeImage {
     max-width: 100%;
     max-height: 100%;
+} */
+
+#fullsizeImage {
+    transition: transform 0.25s ease;
+    cursor: zoom-in; /* Indicate that the image can be zoomed */
+}
+
+#fullsizeImage.zoomed {
+    transform: scale(80vw); /* Example zoom level */
+    cursor: zoom-out; /* Change cursor to indicate zoom out */
 }
 
 @media screen and (max-width: 1150px) {
