--- a/style.css
+++ b/style.css
@@ -480,7 +480,7 @@ nav .nav-toggle{
     margin-bottom: 1em;
 }
 
-.menu-container-small .handwriting{
+.menu-container-small>.handwriting{
     margin-top:1em; 
     margin-bottom: 0.5em; 
     font-size: 2.5em;
