--- a/style.css
+++ b/style.css
@@ -483,7 +483,7 @@ nav .nav-toggle{
 .menu-container-small>.handwriting{
     margin-top:1em; 
     margin-bottom: 1em; 
-    font-size: 2em;
+    /* font-size: 2em; */
 }
 
 .menu{
@@ -496,7 +496,7 @@ nav .nav-toggle{
 }
 
 .menu .handwriting{
-    font-size: 1.5em;
+    /* font-size: 1.5em; */
     margin-top: 1.5em;
     margin-bottom: 0.5em;
 }
